--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
-springBootVersion = 2.2.5.RELEASE
-testContainersVersion = 1.12.3
-junitJupiterVersion = 5.5.2
-auth0JavaJwtVersion = 3.10.0
+springBootVersion = 2.3.1.RELEASE
+testContainersVersion = 1.14.3
+testContainersKeycloakVersion = 1.3.1
+keycloakAdminClientVersion = 10.0.2
+auth0JavaJwtVersion = 3.10.3
