--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,5 @@
-#Tue Mar 17 21:17:33 CET 2020
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.1.1-all.zip
+#Sun Jun 14 17:17:40 CEST 2020
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-all.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStorePath=wrapper/dists
